--- a/index.html
+++ b/index.html
@@ -1,9 +1,100 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title> Hello World! </title>
-    </head>
-    <body>
-        <h1> Hello! </h1>
-    </body>
-</html>
+# Notes on Animal Testing for Persuasive Writing
+
+## **Pro-Animal Testing Arguments (Harvard Medical School)**
+### **Key Points**:
+1. **Legal Requirements**:
+   - U.S. FDA mandates animal testing for investigational new drugs before human trials.
+   - Legislation allows non-animal data for biosimilars but maintains animal testing for safety.
+
+2. **Ethical Guidelines**:
+   - Prevents direct human experimentation post-historical atrocities (Nuremberg Code, Declaration of Helsinki).
+
+3. **Scientific Necessity**:
+   - **Disease Modeling**: Inducing diseases (e.g., cancer, neurodegenerative conditions) in animals is ethically impossible in humans.
+   - **Genetic Studies**: Modifying genes in animals to study disease roles (e.g., protein functions).
+   - **Controlled Environments**: Studying microbiome requires sterile conditions impossible in humans.
+
+---
+
+## **Anti-Animal Testing Arguments**
+
+### **Ethical Issues**:
+1. **Animal Rights**:
+   - Tom Regan: Animals have inherent rights; using them as tools violates moral dignity (quoted in *Save the Animals*).
+   - No consent: Animals cannot choose to participate (*Save the Animals*).
+
+2. **Suffering**:
+   - **Draize Test**: Rabbits endure eye damage, blindness (Cruelty Free International).
+   - **LD50 Test**: Forces lethal doses, causing vomiting, convulsions, and death (Orlans, *Save the Animals*).
+   - Stress in labs alters physiology (e.g., cortisol spikes in monkeys watching others restrained) (*Cambridge Core*).
+
+---
+
+### **Scientific Flaws**:
+1. **Poor Predictive Value**:
+   - **Stroke**: 1,000+ treatments worked in animals but failed in humans (*Cambridge Core*).
+   - **HIV**: 90+ vaccines succeeded in primates but failed in humans (*Cambridge Core*).
+   - **Cancer**: High failure rate despite decades of animal research (Cruelty Free International).
+
+2. **Species Differences**:
+   - Genetic discordance: Only 50% of mouse DNA regulators match humans (Cruelty Free International).
+   - Physiological differences: Aspirin toxic to animals, safe for humans; paracetamol deadly for humans but not macaques (*Cambridge Core*).
+
+3. **Lab Environment Bias**:
+   - Stress from artificial settings skews results (e.g., mice aortic defects disappear in larger cages) (*Cambridge Core*).
+
+---
+
+### **Human Harms**:
+1. **Dangerous Approvals**:
+   - **Vioxx**: Caused 140,000+ heart attacks in humans despite safe animal tests (Cruelty Free International).
+   - **TGN1412**: Nearly killed volunteers; safe in monkeys at 500x human dose (*Cambridge Core*).
+
+2. **Missed Opportunities**:
+   - Tamoxifen (breast cancer drug) almost discarded due to rat liver tumors (*Cambridge Core*).
+   - 96% of drugs fail human trials post-animal testing (*Cambridge Core*).
+
+---
+
+### **Alternatives**:
+1. **In Vitro & Synthetic Models**:
+   - Artificial "skin" (Eyetex), human cell cultures (*Save the Animals*).
+   - Organs-on-chips, 3D-printed tissues (*Cambridge Core*).
+
+2. **Computational Methods**:
+   - Predictive algorithms for toxicity (*PLOS One*).
+
+3. **Human-Based Research**:
+   - Epidemiological studies (e.g., breast cancer risk factors in women) (*PLOS One*).
+
+---
+
+## **Counterarguments & Rebuttals**:
+1. **"Animals Benefit Too"**:
+   - Silcock (RSPCA): Animal welfare is secondary to human interests (*Save the Animals*).
+
+2. **"Animals Are Lower Species"**:
+   - Rebuttal: Higher mammals share physiology, pain responses, and emotions with humans (*Save the Animals*).
+
+3. **"No Choice But to Use Animals"**:
+   - Rebuttal: Alternatives exist (e.g., MIMIC immune system for vaccines) (*PLOS One*).
+
+---
+
+## **Key Statistics**:
+- **92% of drugs fail in human trials** after animal testing (Cruelty Free International).
+- **60% of animals** used in biomedical research (Orlans, *Save the Animals*).
+- **96% failure rate** in clinical drug testing (*Cambridge Core*).
+
+## **Sources for Credibility**:
+- **Harvard Medical School**: Legal/scientific authority.
+- **PLOS One & Cambridge Core**: Peer-reviewed journals.
+- **Cruelty Free International**: Advocacy group with case studies.
+- **Save the Animals**: Persuasive essay with expert quotes (Regan, Orlans).
+
+---
+
+**Persuasive Angles**:
+- Emphasize **ethical violations** (rights, suffering) and **scientific unreliability**.
+- Highlight **human risks** (failed drugs) and **cost-effective alternatives**.
+- Use stats and real-world examples (Vioxx, TGN1412) for emotional/logical appeal.
